antlr-generated/de/timoh/galaxyxparser/GalaxyXParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g 2013-02-28 11:50:15

	package de.timoh.galaxyxparser;
	import de.timoh.galaxyxparser.typechecking.*;
	import de.timoh.galaxyxparser.typechecking.Error;
	import de.timoh.galaxyxparser.structures.*;
	import de.timoh.galaxyxparser.structures.Class;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/**********************************************
 * GalaxyX Grammar
 * Copyright (c) Timo Hanisch 2011
 * timohanisch@gmx.de
 *
 * Namespaces/Classes/Methods/Global Vars get
 * registered here!
 **********************************************/
public class GalaxyXParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEGATION", "STATIC", "TYPEDEF", "IDENTIFIER", "SEMI", "NAMESPACE", "COLON", "END", "INLINE", "FUNC", "LPAREN", "RPAREN", "RETURNS", "COMMA", "CLASS", "LBRACK", "INTEGER", "RBRACK", "EXTENDS", "CONSTRUCTOR", "DESTRUCTOR", "PUBLIC", "PRIVATE", "CONST", "ASSGN", "ASSGNP", "ASSGNS", "ASSGNT", "ASSGND", "BOOLEAN", "BYTE", "CHAR", "FIXED", "GAMELINK", "COLOR", "INT", "POINT", "STRING", "ABILCMD", "ACTOR", "ACTORSCOPE", "BANK", "CAMERAINFO", "MARKER", "ORDER", "PLAYERGROUP", "REGION", "REVEALER", "SOUNDLINK", "TEXT", "TIMER", "TRANSMISSIONSOURCE", "TRIGGER", "UNITFILTER", "UNITGROUP", "UNITREF", "UNIT", "WAVEINFO", "WAVETARGET", "DOODAD", "AIFILTER", "SOUND", "WAVE", "VOID", "PLUS", "SUB", "TIMES", "DIV", "DOT", "NOT", "NEW", "DELETE", "NAMEOF", "NATIVE", "CHARACTER_LITERAL", "STRING_LITERAL", "FIXED_LITERAL", "TRUE", "FALSE", "NULL", "THIS", "LOR", "LAND", "OR", "XOR", "AND", "EQ", "NEQ", "LT", "GT", "LTEQ", "GTEQ", "SHIFTL", "SHIFTR", "IF", "ELIF", "ELSE", "WHILE", "FOR", "BREAK", "CONTINUE", "RETURN", "STRUCT", "INTERFACE", "IMPLEMENTS", "SUPER", "INITIALIZER", "DEFINE", "TILDE", "INC", "DEC", "LBRACE", "RBRACE", "PREFIX", "LETTER", "EscapeSequence", "DIGIT", "HEX_LITERAL", "HexDigit", "Exponent", "FloatTypeSuffix", "OctalEscape", "UnicodeEscape", "WS", "LINE_COMMENT", "MULTI_COMMENT"
    };
    public static final int EOF=-1;
    public static final int NEGATION=4;
    public static final int STATIC=5;
    public static final int TYPEDEF=6;
    public static final int IDENTIFIER=7;
    public static final int SEMI=8;
    public static final int NAMESPACE=9;
    public static final int COLON=10;
    public static final int END=11;
    public static final int INLINE=12;
    public static final int FUNC=13;
    public static final int LPAREN=14;
    public static final int RPAREN=15;
    public static final int RETURNS=16;
    public static final int COMMA=17;
    public static final int CLASS=18;
    public static final int LBRACK=19;
    public static final int INTEGER=20;
    public static final int RBRACK=21;
    public static final int EXTENDS=22;
    public static final int CONSTRUCTOR=23;
    public static final int DESTRUCTOR=24;
    public static final int PUBLIC=25;
    public static final int PRIVATE=26;
    public static final int CONST=27;
    public static final int ASSGN=28;
    public static final int ASSGNP=29;
    public static final int ASSGNS=30;
    public static final int ASSGNT=31;
    public static final int ASSGND=32;
    public static final int BOOLEAN=33;
    public static final int BYTE=34;
    public static final int CHAR=35;
    public static final int FIXED=36;
    public static final int GAMELINK=37;
    public static final int COLOR=38;
    public static final int INT=39;
    public static final int POINT=40;
    public static final int STRING=41;
    public static final int ABILCMD=42;
    public static final int ACTOR=43;
    public static final int ACTORSCOPE=44;
    public static final int BANK=45;
    public static final int CAMERAINFO=46;
    public static final int MARKER=47;
    public static final int ORDER=48;
    public static final int PLAYERGROUP=49;
    public static final int REGION=50;
    public static final int REVEALER=51;
    public static final int SOUNDLINK=52;
    public static final int TEXT=53;
    public static final int TIMER=54;
    public static final int TRANSMISSIONSOURCE=55;
    public static final int TRIGGER=56;
    public static final int UNITFILTER=57;
    public static final int UNITGROUP=58;
    public static final int UNITREF=59;
    public static final int UNIT=60;
    public static final int WAVEINFO=61;
    public static final int WAVETARGET=62;
    public static final int DOODAD=63;
    public static final int AIFILTER=64;
    public static final int SOUND=65;
    public static final int WAVE=66;
    public static final int VOID=67;
    public static final int PLUS=68;
    public static final int SUB=69;
    public static final int TIMES=70;
    public static final int DIV=71;
    public static final int DOT=72;
    public static final int NOT=73;
    public static final int NEW=74;
    public static final int DELETE=75;
    public static final int NAMEOF=76;
    public static final int NATIVE=77;
    public static final int CHARACTER_LITERAL=78;
    public static final int STRING_LITERAL=79;
    public static final int FIXED_LITERAL=80;
    public static final int TRUE=81;
    public static final int FALSE=82;
    public static final int NULL=83;
    public static final int THIS=84;
    public static final int LOR=85;
    public static final int LAND=86;
    public static final int OR=87;
    public static final int XOR=88;
    public static final int AND=89;
    public static final int EQ=90;
    public static final int NEQ=91;
    public static final int LT=92;
    public static final int GT=93;
    public static final int LTEQ=94;
    public static final int GTEQ=95;
    public static final int SHIFTL=96;
    public static final int SHIFTR=97;
    public static final int IF=98;
    public static final int ELIF=99;
    public static final int ELSE=100;
    public static final int WHILE=101;
    public static final int FOR=102;
    public static final int BREAK=103;
    public static final int CONTINUE=104;
    public static final int RETURN=105;
    public static final int STRUCT=106;
    public static final int INTERFACE=107;
    public static final int IMPLEMENTS=108;
    public static final int SUPER=109;
    public static final int INITIALIZER=110;
    public static final int DEFINE=111;
    public static final int TILDE=112;
    public static final int INC=113;
    public static final int DEC=114;
    public static final int LBRACE=115;
    public static final int RBRACE=116;
    public static final int PREFIX=117;
    public static final int LETTER=118;
    public static final int EscapeSequence=119;
    public static final int DIGIT=120;
    public static final int HEX_LITERAL=121;
    public static final int HexDigit=122;
    public static final int Exponent=123;
    public static final int FloatTypeSuffix=124;
    public static final int OctalEscape=125;
    public static final int UnicodeEscape=126;
    public static final int WS=127;
    public static final int LINE_COMMENT=128;
    public static final int MULTI_COMMENT=129;

    // delegates
    // delegators


        public GalaxyXParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GalaxyXParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[174+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GalaxyXParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g"; }


    	private Namespace namespace = null;
    	private Class cl = null;
    	private Method method = null;
    	private Constructor constr = null;
    	private Destructor destr = null;


    public static class translation_unit_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "translation_unit"
    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:42:1: translation_unit : ( namespace )* ;
    public final GalaxyXParser.translation_unit_return translation_unit() throws RecognitionException {
        GalaxyXParser.translation_unit_return retval = new GalaxyXParser.translation_unit_return();
        retval.start = input.LT(1);
        int translation_unit_StartIndex = input.index();
        CommonTree root_0 = null;

        GalaxyXParser.namespace_return namespace1 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:43:2: ( ( namespace )* )
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:43:4: ( namespace )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:43:4: ( namespace )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==NAMESPACE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:0:0: namespace
            	    {
            	    pushFollow(FOLLOW_namespace_in_translation_unit95);
            	    namespace1=namespace();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, namespace1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, translation_unit_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "translation_unit"

    public static class typedef_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "typedef_decl"
    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:46:1: typedef_decl : ( modifier )? ( STATIC )? TYPEDEF type IDENTIFIER SEMI ;
    public final GalaxyXParser.typedef_decl_return typedef_decl() throws RecognitionException {
        GalaxyXParser.typedef_decl_return retval = new GalaxyXParser.typedef_decl_return();
        retval.start = input.LT(1);
        int typedef_decl_StartIndex = input.index();
        CommonTree root_0 = null;

        Token STATIC3=null;
        Token TYPEDEF4=null;
        Token IDENTIFIER6=null;
        Token SEMI7=null;
        GalaxyXParser.modifier_return modifier2 = null;

        GalaxyXParser.type_return type5 = null;


        CommonTree STATIC3_tree=null;
        CommonTree TYPEDEF4_tree=null;
        CommonTree IDENTIFIER6_tree=null;
        CommonTree SEMI7_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:47:2: ( ( modifier )? ( STATIC )? TYPEDEF type IDENTIFIER SEMI )
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:47:4: ( modifier )? ( STATIC )? TYPEDEF type IDENTIFIER SEMI
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:47:4: ( modifier )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=PUBLIC && LA2_0<=PRIVATE)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:0:0: modifier
                    {
                    pushFollow(FOLLOW_modifier_in_typedef_decl107);
                    modifier2=modifier();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, modifier2.getTree());

                    }
                    break;

            }

            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:47:14: ( STATIC )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==STATIC) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:0:0: STATIC
                    {
                    STATIC3=(Token)match(input,STATIC,FOLLOW_STATIC_in_typedef_decl110); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    STATIC3_tree = (CommonTree)adaptor.create(STATIC3);
                    adaptor.addChild(root_0, STATIC3_tree);
                    }

                    }
                    break;

            }

            TYPEDEF4=(Token)match(input,TYPEDEF,FOLLOW_TYPEDEF_in_typedef_decl113); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            TYPEDEF4_tree = (CommonTree)adaptor.create(TYPEDEF4);
            root_0 = (CommonTree)adaptor.becomeRoot(TYPEDEF4_tree, root_0);
            }
            pushFollow(FOLLOW_type_in_typedef_decl116);
            type5=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, type5.getTree());
            IDENTIFIER6=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_typedef_decl118); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTIFIER6_tree = (CommonTree)adaptor.create(IDENTIFIER6);
            adaptor.addChild(root_0, IDENTIFIER6_tree);
            }
            SEMI7=(Token)match(input,SEMI,FOLLOW_SEMI_in_typedef_decl120); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, typedef_decl_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "typedef_decl"

    public static class namespace_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "namespace"
    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:50:1: namespace : NAMESPACE i1= IDENTIFIER COLON ( function | class_decl | field_decl | typedef_decl )* END NAMESPACE ;
    public final GalaxyXParser.namespace_return namespace() throws RecognitionException {
        GalaxyXParser.namespace_return retval = new GalaxyXParser.namespace_return();
        retval.start = input.LT(1);
        int namespace_StartIndex = input.index();
        CommonTree root_0 = null;

        Token i1=null;
        Token NAMESPACE8=null;
        Token COLON9=null;
        Token END14=null;
        Token NAMESPACE15=null;
        GalaxyXParser.function_return function10 = null;

        GalaxyXParser.class_decl_return class_decl11 = null;

        GalaxyXParser.field_decl_return field_decl12 = null;

        GalaxyXParser.typedef_decl_return typedef_decl13 = null;


        CommonTree i1_tree=null;
        CommonTree NAMESPACE8_tree=null;
        CommonTree COLON9_tree=null;
        CommonTree END14_tree=null;
        CommonTree NAMESPACE15_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:51:2: ( NAMESPACE i1= IDENTIFIER COLON ( function | class_decl | field_decl | typedef_decl )* END NAMESPACE )
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:51:4: NAMESPACE i1= IDENTIFIER COLON ( function | class_decl | field_decl | typedef_decl )* END NAMESPACE
            {
            root_0 = (CommonTree)adaptor.nil();

            NAMESPACE8=(Token)match(input,NAMESPACE,FOLLOW_NAMESPACE_in_namespace135); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NAMESPACE8_tree = (CommonTree)adaptor.create(NAMESPACE8);
            root_0 = (CommonTree)adaptor.becomeRoot(NAMESPACE8_tree, root_0);
            }
            i1=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_namespace140); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            i1_tree = (CommonTree)adaptor.create(i1);
            adaptor.addChild(root_0, i1_tree);
            }
            COLON9=(Token)match(input,COLON,FOLLOW_COLON_in_namespace142); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

              		if(Main.table.namespaceExists(i1.getText())){
              			namespace = Main.table.getNamespace((i1!=null?i1.getText():null));
              		}else{
              			namespace = new Namespace((i1!=null?i1.getText():null));
              			Main.table.putNamespace((i1!=null?i1.getText():null),namespace);
              		}
              	
            }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:60:4: ( function | class_decl | field_decl | typedef_decl )*
            loop4:
            do {
                int alt4=5;
                alt4 = dfa4.predict(input);
                switch (alt4) {
            	case 1 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:60:5: function
            	    {
            	    pushFollow(FOLLOW_function_in_namespace153);
            	    function10=function();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, function10.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:60:16: class_decl
            	    {
            	    pushFollow(FOLLOW_class_decl_in_namespace157);
            	    class_decl11=class_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, class_decl11.getTree());

            	    }
            	    break;
            	case 3 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:60:29: field_decl
            	    {
            	    pushFollow(FOLLOW_field_decl_in_namespace161);
            	    field_decl12=field_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, field_decl12.getTree());

            	    }
            	    break;
            	case 4 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\de\\timoh\\galaxyxparser\\GalaxyX.g:60:42: typedef_decl
            	    {
            	    pushFollow(FOLLOW_typedef_decl_in_namespace165);
            	    typedef_decl13=typedef_decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, typedef_decl13.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            END14=(Token)match(input,END,FOLLOW_END_in_namespace172); if (state.failed) return retval;
            NAMESPACE15=(Token)match(input,NAMESPACE,FOLLOW_NAMESPACE_in_namespace175); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

              		namespace = null;
              	
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, namespace_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "namespace"

